Fix reenter webvr presentation on Windows after exiting.

We were getting into a state where we thought we had requested a vsync
from the device, but actually haven't.  This causes future RAFs to not
run, and we won't render.

BUG=835888

Change-Id: I41af90675fa5ba8e6b78a598594f4a2cf28217ed
Reviewed-on: https://chromium-review.googlesource.com/1028935
Reviewed-by: Bill Orr <billorr@chromium.org>
Reviewed-by: Klaus Weidner <klausw@chromium.org>
Commit-Queue: Bill Orr <billorr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553888}
Former-commit-id: 17c587b1b0dfc5f1df1963a70acc73cacb79403b